# serde

./: Cargo.toml
serde/src/de/: mod.rs
serde/src/private/: de.rs
